# bangerpdf

./: .gitignore  LICENSE  README.md  pyproject.toml
bangerpdf/: __init__.py  brand.py  cli.py  cmyk.py  convert.py  crop_marks.py  discovery.py  embed_assets.py  gallery.py  packs.py  preferences.py  proof.py  render.py  skills.py  tiers.py
bangerpdf/packs_data/: __init__.py
bangerpdf/packs_data/bid-package/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/briefing-package/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/certificate/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/demo/: brand-kit.yaml  data.json  pack.yaml  styles.css
bangerpdf/packs_data/invoice/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/letter/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/mgm-strategy-plan/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/one-pager/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/proposal-package/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  styles.css
bangerpdf/packs_data/report-package/: README.md  brand-kit.yaml  data.schema.json  pack.yaml  sample-data.json  (+1 more)
bangerpdf/patterns/: README.md  callout-box.html  cover-page-minimal.html  cover-page-photo.html  hero-fullbleed.html  hero-gradient.html  info-cards.html  lifestyle-divider.html  product-grid-2col.html  product-grid-3col.html  signature-block.html  stats-bar.html  table-styled.html  tier-cards.html  timeline-vertical.html  two-column-text.html
bangerpdf/print_profiles/: commercial-offset.yaml  desktop.yaml  digital-press.yaml
bangerpdf/qa/: __init__.py  bleed.py  cross_doc.py  dashboard.py  density.py  fonts.py  heading_orphan.py  images.py  links.py  orphans.py  overflow.py  pdfx.py  runner.py  section_split.py  single_element.py  tables.py  types.py  variables.py  whitespace_excess.py
bangerpdf/review/: __init__.py  builder.py  workflow.py
bangerpdf/skills_data/: __init__.py
(+49 files in other folders)
